[project]
name = "condenser2"
version = "0.1.0"
description = "Condenser with some modifications"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mysql-connector-python==9.5.0",
    "psycopg2-binary==2.9.11",
    "toposort==1.10",
]


[project.scripts]
subset = "condenser2.direct_subset:run_subset"

[dependency-groups]
dev = [
    "ruff>=0.14.3",
]

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"
